Around and inside

--- a/vim.html
+++ b/vim.html
@@ -247,9 +247,33 @@ img {
 
 							<li class="fragment">
 								<code>d2w</code>
-								<span class="fragment">- Delete as duas próximas palavras.</span>
+								<span class="fragment">- Apague as duas próximas palavras.</span>
+							</li>
+
+							<li class="fragment">
+								<code>d3f.</code>
+								<span class="fragment">- Apague da posição do cursor até o terceiro ponto na linha.</span>
 							</li>
 						</ul>
+					</section>
+
+					<section>
+						<h3>Modificadores</h3>
+
+						<ul>
+							<li><code>i</code>: "Inside", dentro.</li>
+							<li><code>a</code>: "Around", ao redor.</li>
+						</ul>
+
+						<li>
+							<code>ci(</code>
+							<span class="fragment">- Alterar (change) a parte de dentro (inside) os parênteses.</span>
+						</li>
+
+						<li class="fragment">
+							<code>da[</code>
+							<span class="fragment">- Apague (delete) o conteúdo ao redor (around) colchetes.</span>
+						</li>
 					</section>
 				</section>
 			</div>
