--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@ ul.inline-list li {
 						<div class='thumb' style='background-image:url("_images/tdc-logo-post.png")'></div>
 						TDC Agile
 					</a></li>
+
+                    <li><a href="django.html">
+                        <div class="thumb" style='background-image:url("_images/django-allauth.png")'></div>
+                        Ententendo Django
+                    </a></li>
 				</ul>
 			</div>
 		</div>
