--- a/python.html
+++ b/python.html
@@ -406,6 +406,7 @@ set(['a'])
                         <ul>
                             <li>Long (<code>a = 1L</code>)</li>
                             <li>Lambdas (<code>a = lambda a: a + 2</code>)</li>
+							<li>Raw strings (<code>r'string\s'</code>, usadas para regex)</li>
                         </ul>
                     </section>
                 </section>
