--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@ ul.inline-list li {
                         <div class="thumb" style='background-image:url("_images/django-allauth.png")'></div>
                         Ententendo Django
                     </a></li>
+
+					<li><a href="django-rest.html">
+						<div class="thumb" style='background-image:url("_images/django-rest.png")'></div>
+						Django REST Framework
+					</a></li>
 				</ul>
 			</div>
 		</div>
