--- a/fisl2016.html
+++ b/fisl2016.html
@@ -71,6 +71,28 @@ img {
 						</aside>
 					</section>
 				</section>
+
+				<section>
+					<section data-background='_images/fisl-electronmaxresdefault.jpg'>
+						<h2 class="semi-opaque">
+							Electron: Construindo Aplicações Desktop Multi-Plataforma com HTML, CSS e JS
+						</h2>
+
+						<aside class="notes">
+							- Package.json, main.js, Index.html
+							- Github.com/rafajaques/electron-exemplos
+							- Npm install -g electron-prebuild
+							- Github/electron/electron-quick-start
+							- Electron-api-demos
+							- Hokein/electron-sample-apps
+							- Require('./require.json')
+							- Electron builder
+							- Appveyor.com
+							- Photonkit.com
+							- React-desktop
+						</aside>
+					</section>
+				</section>
 			</div>
 
 		</div>
