--- a/fisl2016.html
+++ b/fisl2016.html
@@ -59,8 +59,25 @@ img {
 				</section>
 
 				<section>
+					<section>
+						<h2>Disclaimer!</h2>
+
+						<ul>
+							<li>As apresentações não são minhas;</li>
+							<li>Ver as apresentações não me tornou um expert no assunto;</li>
+							<li>Essas são as minhas opiniões.</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
 					<section data-background='_images/fisl-elixir1481354.png'>
-						<h2 class='semi-opaque'>Elixir, quem é esse pokemon?</h2>
+
+						<div class="semi-opaque">
+							<h2>Elixir, quem é esse pokemon?</h2>
+							<h3>Bruno Loureiro Volcov</h3>
+							<p><a href="http://hemingway.softwarelivre.org/fisl17/41f/sala41f-high-201607150900.ogv" target="_blank">(video)</a></p>
+						</div>
 
 						<aside class="notes">
 							- Suporte a docstrings
@@ -74,9 +91,13 @@ img {
 
 				<section>
 					<section data-background='_images/fisl-electronmaxresdefault.jpg'>
-						<h2 class="semi-opaque">
-							Electron: Construindo Aplicações Desktop Multi-Plataforma com HTML, CSS e JS
-						</h2>
+						<div class="semi-opaque">
+							<h2>Electron: Construindo Aplicações Desktop Multi-Plataforma com HTML, CSS e JS</h2>
+							<h3>Rafael Jaques</h3>
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41d/sala41d-high-201607151059.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- Package.json, main.js, Index.html
@@ -95,10 +116,15 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							BeavOps : Como o Python e Docker construíram um ambiente DevOps
-						</h2>
+					<section data-background='_images/fisl-docker-python.png'>
+						<div class="semi-opaque">
+							<h2>BeavOps : Como o Python e Docker construíram um ambiente DevOps</h2>
+							<h3>Alisson Machado de Menezes</h3>
+							<h3>Gabriela Dias</h3>
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41c/sala41c-high-201607151159.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- Ferramenta de orquestração de geração de ambientes
@@ -110,10 +136,15 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							Shell Script Moderno
-						</h2>
+					<section data-background='_images/fisl-shell-script.png'>
+						<div class="semi-opaque">
+							<h2>Shell Script Moderno</h2>
+							<h3>Aurelio Marinho Jargas</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41a/sala41a-high-201607151309.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- @oreio
@@ -131,10 +162,15 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							Puppet, Ansible, Salt: Maturidade, Simplicidade e Flexibilidade
-						</h2>
+					<section data-background='_images/fisl-puppet-ansible-salt.png'>
+						<div class="semi-opaque">
+							<h2>Puppet, Ansible, Salt: Maturidade, Simplicidade e Flexibilidade</h2>
+							<h3>Diego Francisco de Gastal Morales</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41d/sala41d-high-201607151403.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- @dgmorales
@@ -150,10 +186,15 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							Ansible: Infraestrutura como Código
-						</h2>
+					<section data-background='_images/fisl-ansible.png'>
+						<div class="semi-opaque">
+							<h2>Ansible: Infraestrutura como Código</h2>
+							<h3>Jonatas Baldin de Oliveira</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41b/sala41b-high-201607151559.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- Jonatas Baldwin
@@ -170,10 +211,15 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							Antes e depois de Python: minhas linguagens favoritas
-						</h2>
+					<section data-background='_images/fisl-luciano-ramalho.jpg'>
+						<div class="semi-opaque">
+							<h2>Antes e depois de Python: minhas linguagens favoritas</h2>
+							<h3>Luciano Ramalho</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41a/sala41a-high-201607151659.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- @ramalhoorg
@@ -194,10 +240,15 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							Business Intelligence com dados abertos
-						</h2>
+					<section data-background='_images/fisl-pentaho.jpg'>
+						<div class="semi-opaque">
+							<h2>Business Intelligence com dados abertos</h2>
+							<h3>Rafaela Raganham</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41b/sala41b-high-201607151800.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- Coleta de dados, organização, análise, compartilhamento e monitoramento de informações
@@ -214,10 +265,15 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							Explorando xPaaS
-						</h2>
+					<section data-background='_images/fisl-xpaas.jpg'>
+						<div class="semi-opaque">
+							<h2>Explorando xPaaS</h2>
+							<h3>Ricardo Martinelli de Oliveira</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41c/sala41c-high-201607151901.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- Ricardo martinelli de oliveira
@@ -232,10 +288,15 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							MongoDB - Tudo o que você precisa saber
-						</h2>
+					<section data-background='_images/mongodb.jpg'>
+						<div class="semi-opaque">
+							<h2>MongoDB - Tudo o que você precisa saber</h2>
+							<h3>Christiano Anderson de Souza</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41a/sala41a-high-201607161000.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- Propus.science - parceiro do MongoDB
@@ -259,10 +320,15 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							Tudo que você sempre quis saber sobre licenças de software e nunca pode perguntar
-						</h2>
+					<section data-background='_images/fisl-software-licensing.png'>
+						<div class="semi-opaque">
+							<h2>Tudo que você sempre quis saber sobre licenças de software e nunca pode perguntar</h2>
+							<h3>Kemel Zaidan</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41b/sala41b-high-201607161105.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- @kemelzaidan
@@ -278,18 +344,28 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							Docker Para Programadores Preguiçosos
-						</h2>
+					<section data-background='_images/fisl-docker-for-developers.png'>
+						<div class="semi-opaque">
+							<h2>Docker Para Programadores Preguiçosos</h2>
+							<h3>Paulo Diovani Gonçalves</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41b/sala41b-high-201607161213.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 					</section>
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							Modelos de integração de UX e Engenharia de Software
-						</h2>
+					<section data-background='_images/fisl-ux.jpg'>
+						<div class="semi-opaque">
+							<h2>Modelos de integração de UX e Engenharia de Software</h2>
+							<h3>Erik Guimarães da Silva</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41d/sala41d-high-201607161300.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- Erik Guimarães
@@ -301,10 +377,15 @@ img {
 				</section>
 
 				<section>
-					<section>
-						<h2 class="semi-opaque">
-							Desenvolvimento mobile do jeito certo: Apache Cordova, Zepto e Handlebars
-						</h2>
+					<section data-background='_images/cordova.png'>
+						<div class="semi-opaque">
+							<h2>Desenvolvimento mobile do jeito certo: Apache Cordova, Zepto e Handlebars</h2>
+							<h3>Kemel Zaidan</h3>
+
+							<p>
+								<a href="http://hemingway.softwarelivre.org/fisl17/41b/sala41b-high-201607161400.ogv" target="_blank">(video)</a>
+							</p>
+						</div>
 
 						<aside class="notes">
 							- http://slides.com/kemelzaidan/mobile-fail
@@ -320,6 +401,10 @@ img {
 							- Para push, tem plugin (inotifier?)
 						</aside>
 					</section>
+				</section>
+
+				<section data-background='_images/thats-all-folks.jpg'>
+					<section></section>
 				</section>
 			</div>
 
