six: completed the first example of converting to six

--- a/fisl2016.html
+++ b/fisl2016.html
@@ -66,6 +66,7 @@ img {
 							<li>As apresentações não são minhas;</li>
 							<li>Ver as apresentações não me tornou um expert no assunto;</li>
 							<li>Essas são as minhas opiniões.</li>
+							<li class="fragment">Então porque?</li>
 						</ul>
 					</section>
 				</section>
@@ -400,6 +401,12 @@ img {
 								- Intel app preview - envia a aplicação para o dispositivo, sem fazer build
 							- Para push, tem plugin (inotifier?)
 						</aside>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Impressões gerais do evento</h3>
 					</section>
 				</section>
 
