a few more changes in python 3

--- a/python23six.html
+++ b/python23six.html
@@ -109,6 +109,8 @@
 							<li><code>iter*</code> não vai funcionar</li>
 							<li><code>urlib</code> mudou tudo</li>
 							<li><code>urlparse</code> mudou tudo</li>
+							<li><code>xrange</code> agora é <code>range</code> e o velho <code>range</code> não existe mais.</li>
+							<li><code>raw_input</code> mudou</li>
 						</ul>
 
 						<p class="fragment">(<code>%</code> para formatar strings
